unit - form unit

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
   <% if (process.env.TARGET === 'web') { %>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" href="static/icons/apple-touch-icon.png">
-  <link rel="icon" href="static/icons/favicon.png">
+  <link rel="apple-touch-icon" href="./static/icons/illo-logo-icon.png">
+  <link rel="icon" href="./static/icons/illo-logo-icon.png">
   <link rel="shortcut icon" type="image/x-icon" href="static/icons/512x512.png">
   <link rel="manifest" href="/manifest.json">
   
