--- a/src/index.html
+++ b/src/index.html
@@ -95,8 +95,8 @@
       background-image: linear-gradient(121.7deg, rgba(41,116,250,1) 22.9%, rgba(67,212,255,1) 69%); */
       background-image: url("/static/icons/bg1.png");
       background: url("/static/icons/bg1.png"), #8fd3f4;  
-      background-image: url("/static/icons/bg1.png"), -webkit-linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); 
-      background-image: url("/static/icons/bg1.png"), linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); 
+      background-image: url("/static/icons/bg1.png"), -webkit-linear-gradient(to right, #000000, #0f9b0f); 
+      background-image: url("/static/icons/bg1.png"), linear-gradient(to right, #000000, #0f9b0f); 
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
