progres hari ini

--- a/src/index.html
+++ b/src/index.html
@@ -232,7 +232,7 @@
     if(localStorage.getItem('custom_logo_sekolah')){
       document.getElementById("logo_splash").innerHTML = '<img src="https://be.diskuis.id'+localStorage.getItem('custom_logo_sekolah')+'" style="width:80%;max-width:200px"/>';
       localStorage.setItem('judul_aplikasi',localStorage.getItem('custom_logo_sekolah_nama'));
-      localStorage.setItem('sub_judul_aplikasi','Powered by Diskuis');
+      localStorage.setItem('sub_judul_aplikasi','Powered by Illo');
     }
 
 // 
