progres hari ini

--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,12 @@
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
+
+      background-image: url('/static/icons/mons_80.png');
+      background-image: url('/static/icons/mons_80.png'), linear-gradient(45deg, #fcc5e4 0%, #fda34b 15%, #ff7882 35%, #c8699e 52%, #7046aa 100%);
+      /* background-image: url('/static/icons/mons_80.png'), linear-gradient(120deg, #f093fb 0%, #f5576c 100%); */
+      /* background-image: url('/static/icons/mons_80.png'), linear-gradient(to bottom, #1d976c, #93f9b9); */
+      background-attachment: fixed;
     }
     .splashScreen .innerScreen {
       /* position: relative; */
@@ -179,7 +185,7 @@
   <div class="splashScreen" id="splashScreen">
     <!-- <div id="splashScreen" class="splashScreen"> -->
     <div id="logo_splash" style="width:100%;text-align:center;">
-      <img src="./static/icons/6055.png" style="width:80%;max-width:600px;margin-bottom:100px"/>
+      <img src="./static/icons/53066.png" style="width:80%;max-width:600px;margin-bottom:100px"/>
     </div>
     <br/>
     <div class="innerScreen">
